# idmind_pav_conhec

./: README.md
idmind_robot/idmind_arms/: CMakeLists.txt  CMakeLists.txt~  package.xml
idmind_robot/idmind_arms/include/idmind_arms/: idmind_arms.h
idmind_robot/idmind_arms/src/: idmind_arms.cpp
idmind_robot/idmind_arms/srv/: Torque.srv
idmind_robot/idmind_behaviours/: CMakeLists.txt  package.xml
idmind_robot/idmind_behaviours/include/idmind_behaviours/: idmind_behaviours.h
idmind_robot/idmind_behaviours/src/: idmind_behaviours.cpp  read_files.cpp
idmind_robot/idmind_imu/: CMakeLists.txt  package.xml
idmind_robot/idmind_imu/include/idmind_imu/: idmind_imu.h
idmind_robot/idmind_imu/src/: idmind_imu.cpp
idmind_robot/idmind_interaction/: CMakeLists.txt  CMakeLists.txt~  package.xml
idmind_robot/idmind_interaction/include/idmind_interaction/: idmind_interaction.h
idmind_robot/idmind_interaction/src/: idmind_interaction.cpp  mouth_encoder.cpp
idmind_robot/idmind_interaction/srv/: Projector.srv
idmind_robot/idmind_motors/: CMakeLists.txt  CMakeLists.txt~  package.xml
idmind_robot/idmind_motors/include/idmind_motors/: idmind_motors.h
idmind_robot/idmind_motors/src/: Copy of idmind_motors.cpp  drives.cpp  idmind_motors.cpp
idmind_robot/idmind_motors/srv/: Hardstop.srv  VoltagesStatus.srv
idmind_robot/idmind_odometry/: CMakeLists.txt  package.xml
idmind_robot/idmind_odometry/include/idmind_odometry/: idmind_odometry.h
idmind_robot/idmind_odometry/src/: idmind_odometry.cpp
idmind_robot/idmind_robot/: CMakeLists.txt  package.xml
idmind_robot/idmind_sensors/: CMakeLists.txt~  package.xml
idmind_robot/idmind_sensors/include/idmind_sensors/: idmind_sensors.h
idmind_robot/idmind_sensors/src/: idmind_sensors.cpp
idmind_robot/idmind_sensors/srv/: Batteries.srv  DockUndock.srv
idmind_robot/idmind_serial/: CMakeLists.txt
idmind_robot/idmind_serial/src/: idmind_serial_tests.cpp  short_to_bytes.cpp
idmind_robot/idmind_teleoperation/: CMakeLists.txt  package.xml
idmind_robot/idmind_teleoperation/include/idmind_teleoperation/: idmind_teleoperation.h
idmind_robot/idmind_teleoperation/scripts/: Copy of turtlebot_teleop_key  turtlebot_teleop_key
idmind_robot/idmind_teleoperation/src/: Copy of idmind_teleoperation.cpp  idmind_teleoperation.cpp
idmind_robot/no_build/: CMakeLists.txt  package.xml
idmind_robot/no_build/config/: idmind.rviz
idmind_robot/no_build/config/behaviours/: behaviours.txt  colours.txt  media.txt.BK  mouths.txt  points.txt.BK  points_id.txt
idmind_robot/no_build/config/costmap/2wd/: common.yaml  local_planner.yaml
idmind_robot/no_build/config/costmap/omni/: common.yaml  local_planner.yaml  move_base.yaml
idmind_robot/no_build/config/params/: 2wd.yaml  omni.yaml
idmind_robot/no_build/config/udev_rules/: 10-omni.rules  11-projector.rules
idmind_robot/no_build/launch/: 2_lasers.launch  idmind.launch  idmind_amcl.launch  idmind_base.launch  idmind_map.launch  idmind_navigation.launch  idmind_odometry.launch  rviz.launch  tryout.launch
idmind_robot/no_build/launch/Other/: filters.yaml  laser.launch  legs.launch  rviz_map_nav.launch
idmind_robot/no_build/maps/: ICRE.yaml
idmind_robot/no_build/scripts/: image.sh  projector.sh  rotate_screen_left.desktop  rotate_screen_left.sh  sound.sh  video.sh
maps/: idmind.yaml  manifest.xml
web_server/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml~
web_server/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  web_server-msg-extras.cmake.installspace.in
web_server/catkin_generated/installspace/: web_server-msg-paths.cmake  web_server.pc  web_serverConfig.cmake
web_server/catkin_generated/stamps/web_server/: package.xml.stamp
web_server/cmake/: web_server-genmsg-context.py  web_server-genmsg.cmake
web_server/launch/: monarch_nav.launch  monarch_nav.launch~
web_server/scripts/: server.py  server.py~  server_bak.py
web_server/scripts/static/: console.js  console.js~  home_scout.html~  home_viva.html~  main.css  main.css~
