<?xml version="1.0"?>
<package>
  <name>idmind_arms</name>
  <version>1.0.0</version>
  <description>The idmind_arms package.</description>
  <maintainer email="mcorberan@idmind.pt">Miguel Corberán Ruiz</maintainer>
  <license>MIT License</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>idmind_serial</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>idmind_serial</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>