<?xml version="1.0"?>
<package>
  <name>idmind_behaviours</name>
  <version>1.0.0</version>
  <description>The idmind_behaviours package.</description>
  <maintainer email="mcorberan@idmind.pt">Miguel Corberán Ruiz</maintainer>
  <license>MIT License</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>