<?xml version="1.0"?>
<package>
  <name>idmind_robot</name>
  <version>1.0.0</version>
  <description>The idmind_robot metapackage.</description>
  <maintainer email="mcorberan@idmind.pt">Miguel Corberán Ruiz</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>

</package>
