<?xml version="1.0"?>
<package>
  <name>idmind_teleoperation</name>
  <version>1.0.0</version>
  <description>The idmind_teleoperation package.</description>
  <maintainer email="mcorberan@idmind.pt">Miguel Corberán Ruiz</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>idmind_motors</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>idmind_motors</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
