<?xml version="1.0"?>
<package>
  <name>no_build</name>
  <version>1.0.0</version>
  <description>The no_build package.</description>
  <maintainer email="mcorberan@idmind.pt">Miguel Corberán Ruiz</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
